# talent-match

./: .env.example  .gitignore  README.md  pyproject.toml  run.py  technical-conclusions.md
.streamlit/: config.toml
src/talent_match/: main.py
src/talent_match/config/: settings.py
src/talent_match/models/: evaluation.py  responses.py  types.py
src/talent_match/prompts/: base.py  cv_prompt.py
src/talent_match/prompts/evaluation/: education_prompt.py  experience_prompt.py  skills_prompt.py  summary_prompt.py
src/talent_match/services/: evaluation_service.py  experience_calculator.py  logging_service.py  openai_service.py  skills_calculator.py
src/talent_match/ui/components/: formatting.py  metrics.py  sections.py
src/talent_match/ui/pages/: evaluation.py
