[tool.poetry]
name = "talent-match"
version = "0.1.0"
description = "AI-powered CV evaluation tool"
authors = ["Ras Alungei <ras.alungei@gmail.com>"]
packages = [{include = "talent_match", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
openai = "^1.3.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"